--- a/functions/package.json
+++ b/functions/package.json
@@ -26,6 +26,7 @@
         "cross-env": "^7.0.3",
         "express": "^4.18.2",
         "express-handlebars": "^7.1.2",
+        "express-rate-limit": "^7.2.0",
         "firebase-admin": "^11.8.0",
         "firebase-functions": "^4.8.1",
         "joi": "^17.12.0",
